@@ -1,12 +1,7 @@
 {
-  "count": 5,
-  "uniques": 4,
+  "count": 3,
+  "uniques": 3,
   "views": [
-    {
-      "timestamp": "2023-09-10T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-09-12T00:00:00Z",
       "count": 1,
